@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-FeedPP
-version:      0.21
+version:      0.22
 version_from: lib/XML/FeedPP.pm
 installdirs:  site
 requires:
     Test::More:                    0
-    XML::TreePP:                   0.19
+    XML::TreePP:                   0.21
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30_01
