@@ -5,7 +5,7 @@ WriteMakefile(
     VERSION_FROM        => 'lib/XML/FeedPP.pm',
     PREREQ_PM           => {
         'Test::More'        => '0',
-        'XML::TreePP'       => '0.19',
+        'XML::TreePP'       => '0.21',
 #       'LWP::UserAgent'    => '0',
 #       'HTTP::Lite'        => '0'
     },
