@@ -272,7 +272,7 @@ AUTHOR
     Yusuke Kawasaki, http://www.kawa.net/
 
 COPYRIGHT AND LICENSE
-    Copyright (c) 2006 Yusuke Kawasaki. All rights reserved. This program is
-    free software; you can redistribute it and/or modify it under the same
-    terms as Perl itself.
+    Copyright (c) 2006-2007 Yusuke Kawasaki. All rights reserved. This
+    program is free software; you can redistribute it and/or modify it under
+    the same terms as Perl itself.
 
